--- a/app/views/questions/answer.html.erb
+++ b/app/views/questions/answer.html.erb
@@ -1,5 +1,8 @@
-<h1>This is the answer from your coach...</h1>
+<h1>This is a lesson from your coach...</h1>
 
-<p><%= @question %>- You</p>
+<p1><%= @question %>- You</p1>
+<br>
+<p2><%= @answer %>- Coach</p2>
+<%= link_to "Ask again!", "/ask" %>
 
-<p><%= @answer %>- You</p>
+
